# newcicd

./: Dockerfile  compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
new/: main.py
